// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package hashicorp.consul.mesh.v1alpha1;

message ConnectionConfig {
  uint64 connect_timeout_ms = 2;
  uint64 request_timeout_ms = 3;
}

message InboundConnectionsConfig {
  uint64 max_inbound_connections = 12;
  BalanceConnections balance_inbound_connections = 13;
}

enum BalanceConnections {
  // buf:lint:ignore ENUM_ZERO_VALUE_SUFFIX
  BALANCE_CONNECTIONS_DEFAULT = 0;
  BALANCE_CONNECTIONS_EXACT = 1;
}
